--- a/index-vue.html
+++ b/index-vue.html
@@ -23,7 +23,6 @@
           <button type="button" name="button" @click="filterGenre()">cerca</button>
       </div>
       <div class="cds-container container">
-        <?php foreach ($database as $album) {?>
 
           <div class="cd" v-for='album in albums'>
             <img :src="album.poster" :alt="album.title">
@@ -32,7 +31,6 @@
             <span class="year">{{album.year}}</span>
           </div>
 
-        <?php }  ?>
 
       </div>
 
@@ -40,6 +38,7 @@
     <script src="https://kit.fontawesome.com/0ae8af7e4e.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 
   </body>
